Update rapport reunion :beer: bien mérité :cool:

--- a/Rapport_reunion/Rapport_reunion_8.tex
+++ b/Rapport_reunion/Rapport_reunion_8.tex
@@ -26,6 +26,8 @@
 
 Présents à cette réunion : Laoussing Kévin, Reynaud Nicolas, Bascol Kevin.\\
 
+Abréviation utilisée:\\
+DCG : Document de Conception Générale.
 
 %--------------------------Ordre du jour------------------------------%
 \subsection*{Ordre du jour}
@@ -57,6 +59,7 @@ Présents à cette réunion : Laoussing Kévin, Reynaud Nicolas, Bascol Kevin.\\
 	\item Déplacement de la période de codage pour la faire correspondre aux vacances, ce qui nous permettra d'être à notre plein potentiel.
 	\item Raccourcissement du temps pour la rédaction du bilan, passant de 9 jours a 2 jours.
 	\item La fonctionnalité de statistique sera réduite à son minimum ( Pas de graphe, peu d'information ).
+	\item Décalage du rendu du DCG du Dimanche 30 Novembre au Mercredi 3 Décembre.
 \end{itemize}
 
 %--------------------------Prévision du travail à réaliser------------------------------%
