Update rapport je vous hais

--- a/Rapport_reunion/Rapport_reunion_8.tex
+++ b/Rapport_reunion/Rapport_reunion_8.tex
@@ -60,6 +60,10 @@ DCG : Document de Conception Générale.
 	\item Raccourcissement du temps pour la rédaction du bilan, passant de 9 jours a 2 jours.
 	\item La fonctionnalité de statistique sera réduite à son minimum ( Pas de graphe, peu d'information ).
 	\item Décalage du rendu du DCG du Dimanche 30 Novembre au Mercredi 3 Décembre.
+	\item Décalage du rendu, du cahier de tests d'intégration du 22 Novembre au 30 Novembre.
+	\begin{itemize}[label = $\circ$]
+		\item Pour rappel la version du planner est mise a jours régulièrement ici : \url{http://ujm.eu5.org/gl/}
+	\end{itemize}
 \end{itemize}
 
 %--------------------------Prévision du travail à réaliser------------------------------%
