Update rapport je vous hais

--- a/Rapport_reunion/Rapport_reunion_8.tex
+++ b/Rapport_reunion/Rapport_reunion_8.tex
@@ -57,7 +57,7 @@ DCG : Document de Conception Générale.
 		\item Utilisation de lucidchart pour sa simplicité d'utilisation et la possibilité de collaborer en temps réel.
 	\end{itemize}
 	\item Déplacement de la période de codage pour la faire correspondre aux vacances, ce qui nous permettra d'être à notre plein potentiel.
-	\item Raccourcissement du temps pour la rédaction du bilan, passant de 9 jours a 2 jours.
+	\item Raccourcissement du temps pour la rédaction du bilan, passant de 9 jours à 2 jours.
 	\item La fonctionnalité de statistique sera réduite à son minimum ( Pas de graphe, peu d'information ).
 	\item Décalage du rendu du DCG du Dimanche 30 Novembre au Mercredi 3 Décembre.
 	\item Décalage du rendu, du cahier de tests d'intégration du 22 Novembre au 30 Novembre.
