--- a/Document_de_conception_detaille/Document_de_conception_detaille.tex
+++ b/Document_de_conception_detaille/Document_de_conception_detaille.tex
@@ -111,4 +111,12 @@ Le logiciel de client/serveur FTP est un outil permettant à des particuliers ou
 \item[Uploader] Anglicisme du mot "téléverser".
 \end{description}
 
+\section{Description générale}
+
+Ce projet consiste en la création d'un serveur FTP chez un particulier ou une entreprise, ayant accès à la machine sur laquelle est installé le programme. Les utilisateurs se verront donner l'accès par l'administrateur à certains dossiers de la machine sur laquelle est installé le serveur. Ils pourront faire alors des échanges de fichiers dans ces répertoires à l'aide du client FTP.\\
+
+\section{Architecture du système Kould Not Share}
+
+
+
 \end{document}
