--- a/Document_de_conception_detaille/Document_de_conception_detaille.tex
+++ b/Document_de_conception_detaille/Document_de_conception_detaille.tex
@@ -116,6 +116,8 @@ Le logiciel de client/serveur FTP est un outil permettant à des particuliers ou
 
 Ce projet consiste en la création d'un serveur FTP chez un particulier ou une entreprise, ayant accès à la machine sur laquelle est installé le programme. Les utilisateurs se verront donner l'accès par l'administrateur à certains dossiers de la machine sur laquelle est installé le serveur. Ils pourront faire alors des échanges de fichiers dans ces répertoires à l'aide du client FTP.\\
 
+\newpage
+
 \section{Architecture du système Kould Not Share}
 Nous allons préciser les modules décrit dans le document de conception générale grâce à des diagrammes de classe.
 \subsection{Module de gestion des dossiers}
@@ -139,8 +141,10 @@ Module décrit dans la section 3.1.2.1.5 du DCG.
 \subsection{Module de statistiques}
 Module décrit dans la section 3.1.2.1.6 du DCG.
 \begin{center}
-	%\includegraphics{./Ressources/downl}\\
+	\includegraphics{./Ressources/statistique.jpeg}\\
 \end{center}
+
+\newpage
 
 \subsection{Module de communication}
 Module décrit dans la section 3.1.2.1.7 du DCG.
@@ -148,11 +152,15 @@ Module décrit dans la section 3.1.2.1.7 du DCG.
 	\includegraphics{./Ressources/communication.jpeg}\\
 \end{center}
 
+\newpage
+
 \subsection{Module des historiques des événements}
 Module décrit dans la section 3.1.2.2.1 du DCG.
 \begin{center}
 	\includegraphics{./Ressources/historiqueEvenement.jpeg}\\
 \end{center}
+
+\newpage
 
 \subsection{Module de gestion des comptes}
 Module décrit dans la section 3.1.2.2.2 du DCG.
