modif diag classe modules dossier et limitations

--- a/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
@@ -110,5 +110,23 @@
 
 \newgeometry{top=2cm, bottom=2cm, left=0.5cm, right=0.5cm}
 
+\subsection{Module de gestion des dossiers}
 
+
+\subsection{Module de configurations et limitations}
+
+
+\subsection{Module d'upload et download}
+
+
+\subsection{Module de statistiques}
+
+
+\subsection{Module de communication}
+
+
+\subsection{Module des historiques des événements}
+
+
+\subsection{Module de gestion des comptes}
 \end{document}
