--- a/Document_de_conception_detaille/Document_de_conception_detaille.tex
+++ b/Document_de_conception_detaille/Document_de_conception_detaille.tex
@@ -126,11 +126,15 @@ Module décrit dans la section 3.1.2.1.3 du DCG.
 	\includegraphics[scale=0.5]{./Ressources/modules_doss.png}\\
 \end{center}
 
+\hspace{5cm}
+
 \subsection{Module de configurations et limitations}
 Module décrit dans la section 3.1.2.1.4 du DCG.
 \begin{center}
 	\includegraphics[scale=0.5]{./Ressources/modules_lim.png}\\
 \end{center}
+
+\newpage
 
 \subsection{Module d'upload et download}
 Module décrit dans la section 3.1.2.1.5 du DCG.
@@ -138,10 +142,20 @@ Module décrit dans la section 3.1.2.1.5 du DCG.
 	\includegraphics{./Ressources/downlaodUpload.jpeg}\\
 \end{center}
 
+\hspace{5cm}
+
 \subsection{Module de statistiques}
 Module décrit dans la section 3.1.2.1.6 du DCG.
 \begin{center}
 	\includegraphics{./Ressources/statistique.jpeg}\\
+\end{center}
+
+\hspace{5cm}
+
+\subsection{Module des historiques des événements}
+Module décrit dans la section 3.1.2.2.1 du DCG.
+\begin{center}
+	\includegraphics{./Ressources/historiqueEvenement.jpeg}\\
 \end{center}
 
 \newpage
@@ -150,14 +164,6 @@ Module décrit dans la section 3.1.2.1.6 du DCG.
 Module décrit dans la section 3.1.2.1.7 du DCG.
 \begin{center}
 	\includegraphics{./Ressources/communication.jpeg}\\
-\end{center}
-
-\newpage
-
-\subsection{Module des historiques des événements}
-Module décrit dans la section 3.1.2.2.1 du DCG.
-\begin{center}
-	\includegraphics{./Ressources/historiqueEvenement.jpeg}\\
 \end{center}
 
 \newpage
