proposition forme CTI

--- a/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
@@ -110,23 +110,117 @@
 
 \newgeometry{top=2cm, bottom=2cm, left=0.5cm, right=0.5cm}
 
+\section{Tests par module}
+
 \subsection{Module de gestion des dossiers}
+
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{2.5cm}|p{8cm}|p{8cm}|p{8cm}|}
+		\hline
+		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
+		\hline
+		ModDoss.1 & Récupération de l'arborescence disponible & & \\
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
 
 
 \subsection{Module de configurations et limitations}
 
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{2.5cm}|p{8cm}|p{8cm}|p{8cm}|}
+		\hline
+		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
+		\hline
+		
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
 
 \subsection{Module d'upload et download}
+
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{2.5cm}|p{8cm}|p{8cm}|p{8cm}|}
+		\hline
+		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
+		\hline
+		
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
 
 
 \subsection{Module de statistiques}
 
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{2.5cm}|p{8cm}|p{8cm}|p{8cm}|}
+		\hline
+		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
+		\hline
+		
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
 
 \subsection{Module de communication}
+
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{2.5cm}|p{8cm}|p{8cm}|p{8cm}|}
+		\hline
+		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
+		\hline
+		
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
 
 
 \subsection{Module des historiques des événements}
 
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{2.5cm}|p{8cm}|p{8cm}|p{8cm}|}
+		\hline
+		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
+		\hline
+		
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
 
 \subsection{Module de gestion des comptes}
+
+\begin{center}
+	\bgroup
+	\def\arraystretch{1.5}
+	\begin{tabular}{|p{2.5cm}|p{8cm}|p{8cm}|p{8cm}|}
+		\hline
+		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
+		\hline
+		
+		\hline
+	\end{tabular}
+	\egroup
+\end{center}
+
 \end{document}
