--- a/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
@@ -121,7 +121,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		ModDoss.1 & Récupération de l'arborescence disponible & & \\
+		ModDoss.1 & Récupération de l'arborescence disponible. & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -137,7 +137,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		
+		ModCLim.1 & Récupération des valeurs précédentes. & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -153,7 +153,9 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		
+		ModDwUp.1 & Récupération des fichiers disponibles. & & \\
+		\hline
+		ModDwUp.2 & Prises en compte des limitations définies. & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -169,7 +171,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		
+		ModStat.1 & Enregistrement des actions recensées. & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -185,7 +187,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		
+		ModComm.1 & Récupérations droits utilisateur. & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -201,7 +203,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		
+		ModHist.1 & Enregistrement des événements. & & \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -217,7 +219,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		
+		ModCmpt.1 & Connexion à un compte. & & \\
 		\hline
 	\end{tabular}
 	\egroup
