--- a/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
@@ -155,8 +155,6 @@
 		\hline
 		ModDwUp.1 & Récupération des fichiers disponibles. & & \\
 		\hline
-		ModDwUp.2 & Prises en compte des limitations définies. & & \\
-		\hline
 	\end{tabular}
 	\egroup
 \end{center}
@@ -188,6 +186,8 @@
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
 		ModComm.1 & Récupérations droits utilisateur. & & \\
+		\hline
+		ModComm.2 & Prises en compte des limitations définies. & & \\
 		\hline
 	\end{tabular}
 	\egroup
