--- a/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
@@ -185,9 +185,9 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		ModComm.1 & Récupérations droits utilisateur. & & \\
+		ModComm.1 & Récupération des droits utilisateur. & & \\
 		\hline
-		ModComm.2 & Prises en compte des limitations définies. & & \\
+		ModComm.2 & Prise en compte des limitations définies. & & \\
 		\hline
 	\end{tabular}
 	\egroup
