--- a/Rapport_reunion/Rapport_reunion_11.tex
+++ b/Rapport_reunion/Rapport_reunion_11.tex
@@ -33,11 +33,11 @@ Présents à cette réunion : Nicolas Reynaud, Kévin Laoussing, Kevin Bascol.
 
 %--------------------------Bilan du travail réalisé------------------------------%
 \subsection*{Bilan du travail réalisé}
-Cette semaine étant très chargée en partiel, peut d'évolution on été fait.
+Cette semaine étant très chargée en partiel, peu d'évolution ont été réalisées.
 
 \begin{itemize}[label = $\circledcirc$]
-	\item Nicolas Reynaud à finis de crée les bases, seule l'interface graphique reste à faire dans les bases.
-	\item Nicolas Reynaud à également crée un client basique en ligne de commande avec fonctionnalitées de base incluses.
+	\item Nicolas Reynaud a fini de créer les bases, seule l'interface graphique reste à faire dans les bases.
+	\item Nicolas Reynaud a également crée un client basique en ligne de commande avec fonctionnalités de base incluses.
 \end{itemize}
 
 
@@ -53,7 +53,7 @@ Cette semaine étant très chargée en partiel, peut d'évolution on été fait.
 
 \begin{itemize}[label = $\circledcirc$]
 	\item Continuer l'implémentation et commencer / finir l'interface graphique.
-	\item Commencer d'implémenter les choses secondaires.
+	\item Commencer d'implémenter les fonctions secondaires.
 \end{itemize}
 
 %----------------------------------Prochaine réunion------------------------------------%
