--- a/Rapport_reunion/Rapport_reunion_11.tex
+++ b/Rapport_reunion/Rapport_reunion_11.tex
@@ -37,7 +37,7 @@ Cette semaine étant très chargée en partiel, peu d'évolution ont été réal
 
 \begin{itemize}[label = $\circledcirc$]
 	\item Nicolas Reynaud a fini de créer les bases, seule l'interface graphique reste à faire dans les bases.
-	\item Nicolas Reynaud a également crée un client basique en ligne de commande avec fonctionnalités de base incluses.
+	\item Nicolas Reynaud a également crée un client basique en ligne de commande avec les fonctionnalités de base incluses.
 \end{itemize}
 
 
