--- a/Rapport_reunion/Rapport_reunion_12.tex
+++ b/Rapport_reunion/Rapport_reunion_12.tex
@@ -36,11 +36,13 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 
 \begin{itemize}[label = $\blacktriangleright$]
 \item L'implémentation de l'interface graphique du client est avancée.
-D'un point vue MVC, la vue est quasiment achevé, le contrôleur et le modèle ont été implémenter pour l'authentification.
+D'un point vue MVC, la vue est quasiment achevée, le contrôleur et le modèle sont implémentés pour l'authentification.
 
 \item La fonctionnalité d'authentification fonctionne sur l'interface graphique du client, mais il reste à faire des tests (vérifiez que le comportement du logiciel si l'utilisateur envoie un mot de passe vide, si le pseudo saisi est excessivement long...).
 
-\item Ré-écriture de certaine fonction de l'authentification côté serveur et côté client : utilisation de beans, révision des threads côté serveur...
+\item Ré-écriture de certaines fonctions de l'authentification côté serveur et côté client : utilisation de beans, révision des threads côté serveur...
+
+\item Nous avons pris du retard concernant l'implémentation du projet, notamment à cause de l'implémentation du patron de conception MVC.
 \end{itemize}
 
 
@@ -48,9 +50,7 @@ D'un point vue MVC, la vue est quasiment achevé, le contrôleur et le modèle o
 \subsection*{Décisions prises}
 
 \begin{itemize}[label = $\blacktriangleright$]
-\item Nous avons pris du retard concernant l'implémentation du projet, notamment a cause de l'implémentation du patron de conception MVC.
-
-\item En fonction de l'avancement du projet durant la semaine qui suit, nous choisirons les fonctions qui ne vont pas être implémenter. Il est encore trop tôt pour décider.
+\item En fonction de l'avancement du projet durant la semaine qui suit, nous choisirons les fonctions qui ne vont pas être implémentées. Il est encore trop tôt pour décider.
 \end{itemize}
 
 %--------------------------Prévision du travail à réaliser------------------------------%
@@ -65,7 +65,13 @@ D'un point vue MVC, la vue est quasiment achevé, le contrôleur et le modèle o
 %----------------------------------Prochaine réunion------------------------------------%
 \subsection*{Prochaine réunion : 2 Janvier 2015}
 
-\textbf{Ordre du jour} : état d'avancement du projet.\\
+\textbf{Ordre du jour} : Etat d'avancement du projet.\\
 
+%--------------------------Remarques------------------------------%
+\subsection*{Remarques}
+
+\begin{itemize}[label = $\blacktriangleright$]
+\item Nous avons pris du retard concernant l'implémentation du projet, notamment à cause de l'implémentation du patron de conception MVC.
+\end{itemize}
 
 \end{document}
