Fin du cahier de test d'intégration

--- a/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_d_integration.tex
@@ -121,7 +121,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		ModDoss.1 & Récupération de l'arborescence disponible. & & \\
+		ModDoss.1 & Récupération de l'arborescence disponible. & L'arborescence est disponible après la connexion & Aucune \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -137,7 +137,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		ModCLim.1 & Récupération des valeurs précédentes. & & \\
+		ModCLim.1 & Récupération des valeurs précédentes. & non implémenté & Aucune \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -153,7 +153,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		ModDwUp.1 & Récupération des fichiers disponibles. & & \\
+		ModDwUp.1 & Récupération des fichiers disponibles. & Possibilité de Télécharger / Téléverser des fichier & Aucune \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -169,7 +169,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		ModStat.1 & Enregistrement des actions recensées. & & \\
+		ModStat.1 & Enregistrement des actions recensées. & non implémenté & Aucune \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -185,9 +185,9 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		ModComm.1 & Récupération des droits utilisateur. & & \\
+		ModComm.1 & Récupération des droits utilisateur. & non implémenté & Aucune \\
 		\hline
-		ModComm.2 & Prise en compte des limitations définies. & & \\
+		ModComm.2 & Prise en compte des limitations définies. & non implémenté & Aucune \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -203,7 +203,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		ModHist.1 & Enregistrement des événements. & & \\
+		ModHist.1 & Enregistrement des événements. & non implémenté & Aucun \\
 		\hline
 	\end{tabular}
 	\egroup
@@ -219,7 +219,7 @@
 		\hline
 		\rowcolor{gris}Référence & Fonction & Commentaires & Correction\\
 		\hline
-		ModCmpt.1 & Connexion à un compte. & & \\
+		ModCmpt.1 & Connexion à un compte. & Les vérifications sont en place & Aucune \\
 		\hline
 	\end{tabular}
 	\egroup
