--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -9,9 +9,14 @@
 \definecolor{gris}{rgb}{0.75,0.75,0.75}
 \usepackage{colortbl}
 \usepackage{enumitem}
+\setitemize{noitemsep,topsep=0pt,parsep=0pt,partopsep=0pt,leftmargin=5pt}
 \usepackage{version}
 \usepackage{multirow}
 \usepackage[top=1cm, bottom=2cm, left=2cm, right=2cm]{geometry}
+
+\definecolor{true}{rgb}{0,0.40,0}
+\definecolor{false}{rgb}{0.60,0,0}
+
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 
@@ -119,25 +124,19 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		AuthC.1 & 3.1.1.1.1.1 3.1.1.1.1.2 3.1.1.1.1.3 3.1.1.1.1.13 & Ouvrir le logiciel. & Le formulaire de connexion apparait en pop-up au centre de la fenêtre, le reste de l'application est grisé (hormis la barre d'action). & \\
+		AuthC.1 & 3.1.1.1.1.1 3.1.1.1.1.2 3.1.1.1.1.3 3.1.1.1.1.13 & Ouvrir le logiciel. & Le formulaire de connexion apparait en pop-up au centre de la fenêtre, le reste de l'application est grisé (hormis la barre d'action). & \begin{itemize}[label=$\ast$] \item \textcolor{true}{Le pop-up est apparu au centre.} \item \textcolor{false}{Le reste de l'application n'est pas grisé.}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.1 & 3.1.1.1.1.4 3.1.1.1.1.5 & Cliquer sur le bouton de déconnexion. & Le bouton doit être grisé et ne doit rien déclencher. & \\
+		AuthC.1.1 & 3.1.1.1.1.4 3.1.1.1.1.5 & Cliquer sur le bouton de déconnexion. & Le bouton doit être grisé et ne doit rien déclencher. & \begin{itemize}[label=$\ast$] \item \textcolor{true}{Le bouton est désactivé.} \item \textcolor{false}{Le bouton n'est pas grisé.}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.2 & 3.1.1.1.1.6 3.1.1.1.1.7 3.1.1.1.1.8 &  & sur le pop-up, le titre "Authentification" apparait centré et est au dessus d'une barre horizontale. & \\
+		AuthC.1.2 & 3.1.1.1.1.6 3.1.1.1.1.7 3.1.1.1.1.8 &  & sur le pop-up, le titre "Authentification" apparait centré et est au dessus d'une barre horizontale. & \begin{itemize}[label=$\ast$] \item \textcolor{true}{Validé.}\end{itemize}\\
 		\cline{1-2}\cline{4-5}
-		AuthC.1.3 & 3.1.1.1.1.9 3.1.1.1.1.10 3.1.1.1.2.3 3.1.1.1.2.4 & & Les mots "Serveur", "Nom d'utilisateur" et "Mot de passe" sont affichés, chacun suivit d'un champ de saisie de texte. & \\
+		AuthC.1.3 & 3.1.1.1.1.9 3.1.1.1.1.10 3.1.1.1.2.3 3.1.1.1.2.4 & & Les mots "Serveur", "Nom d'utilisateur" et "Mot de passe" sont affichés, chacun suivit d'un champ de saisie de texte. & \begin{itemize}[label=$\ast$] \item \textcolor{true}{Validé.}\end{itemize}\\
 		\cline{1-2}\cline{4-5}
-		AuthC.1.4 & 3.1.1.1.1.11 & & Un bouton "Se connecter" est affiché centré en bas du pop-up & \\
+		AuthC.1.4 & 3.1.1.1.1.11 & & Un bouton "Se connecter" est affiché centré en bas du pop-up &  \begin{itemize}[label=$\ast$] \item \textcolor{true}{Validé.}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.4.1 & 3.1.1.1.1.12 3.1.1.1.2.8 3.1.1.1.2.9 3.1.1.1.2.10 & Remplir incorrectement un ou plusieurs champs de saisie puis cliquer sur le bouton "Se connecter" (à effectuer avec plusieurs combinaison de champs incorrects). & Le(s) champ(s) incorrect(s) possède(nt) une bordure rouge. & \\
+		AuthC.1.4.1 & 3.1.1.1.1.12 3.1.1.1.2.8 3.1.1.1.2.9 3.1.1.1.2.10 & Remplir incorrectement un ou plusieurs champs de saisie puis cliquer sur le bouton "Se connecter" (à effectuer avec plusieurs combinaison de champs incorrects). & Le(s) champ(s) incorrect(s) possède(nt) une bordure rouge. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.4.1.1 & 3.1.1.1.2.11 & Rentrer une adresse serveur autre qu'une adresse IP v4. & La bordure du champ "Serveur" devient rouge et une boite de dialogue avec le texte "Erreur de serveur". & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.4.1.2 & 3.1.1.1.2.12 3.1.1.1.2.15.2 & Rentrer un identifiant de plus de 30 caractères. & La bordure du champ "Nom d'utilisateur" devient rouge et une boite de dialogue avec le texte "L'utilisateur entré est invalide". & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.4.1.3 & 3.1.1.1.2.13 3.1.1.1.2.15.2 & Rentrer un identifiant de moins de 3 caractères. & La bordure du champ "Nom d'utilisateur" devient rouge et une boite de dialogue avec le texte "L'utilisateur entré est invalide". & \\
-		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.4.1.4 & 3.1.1.1.2.14 3.1.1.1.2.15.1 & Rentrer un mot de passe de moins de 6 caractères. & La bordure du champ "Mot de passe" devient rouge et une boite de dialogue avec le texte "Erreur de mot de passe". & \\
+		AuthC.1.4.1.1 & 3.1.1.1.2.11 & Rentrer une adresse serveur autre qu'une adresse IP v4. & La bordure du champ "Serveur" devient rouge et une boite de dialogue avec le texte "Erreur de serveur". & \begin{itemize}[label=$\ast$] \item  \textcolor{true}{Une erreur s'affiche en cas de mauvais serveur} \item \textcolor{false}{Erreur "identifiants invalides"} \item \textcolor{false}{L'erreur est affichée directement dans le pop-up}\end{itemize}\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -150,18 +149,24 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
+		AuthC.1.4.1.2 & 3.1.1.1.2.12 3.1.1.1.2.15.2 & Rentrer un identifiant de plus de 30 caractères. & La bordure du champ "Nom d'utilisateur" devient rouge et une boite de dialogue avec le texte "L'utilisateur entré est invalide". & \begin{itemize}[label=$\ast$] \item  \textcolor{true}{L'erreur "L'utilisateur entré est invalide" s'affiche en cas de pseudo trop long} \item \textcolor{false}{Le champ ne devient pas rouge.} \item \textcolor{false}{L'erreur est affichée directement dans le pop-up}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.4.1.5 & 3.1.1.1.2.15 3.1.1.1.2.15.1 & Rentrer un mot de passe de moins de 6 caractères. & La bordure du champ "Mot de passe" devient rouge et une boite de dialogue avec le texte "Erreur de mot de passe". & \\
+		AuthC.1.4.1.3 & 3.1.1.1.2.13 3.1.1.1.2.15.2 & Rentrer un identifiant de moins de 3 caractères. & La bordure du champ "Nom d'utilisateur" devient rouge et une boite de dialogue avec le texte "L'utilisateur entré est invalide". & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthC.1.4.2 & 3.1.1.1.2.1 3.1.1.1.2.5 3.1.1.1.2.6 & Remplir correctement les champs, puis cliquer sur "Se connecter". & Le programme se connecte au serveur avec l'identifiant donné. & \\
+		AuthC.1.4.1.4 & 3.1.1.1.2.14 3.1.1.1.2.15.1 & Rentrer un mot de passe de moins de 6 caractères. & La bordure du champ "Mot de passe" devient rouge et une boite de dialogue avec le texte "Erreur de mot de passe". & \begin{itemize}[label=$\ast$] \item  \textcolor{true}{L'erreur s'affiche en cas de mot de passe trop court} \item \textcolor{false}{Le champ ne devient pas rouge.} \item \textcolor{false}{L'erreur est affichée directement dans le pop-up}\end{itemize}\\
+		
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		AuthC.1.4.1.5 & 3.1.1.1.2.15 3.1.1.1.2.15.1 & Rentrer un mot de passe de plus de 50 caractères. & La bordure du champ "Mot de passe" devient rouge et une boite de dialogue avec le texte "Erreur de mot de passe". & \begin{itemize}[label=$\ast$] \item  \textcolor{true}{L'erreur s'affiche en cas de mot de passe trop long} \item \textcolor{false}{Le champ ne devient pas rouge.} \item \textcolor{false}{L'erreur est affichée directement dans le pop-up}\end{itemize}\\
+		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
+		AuthC.1.4.2 & 3.1.1.1.2.1 3.1.1.1.2.5 3.1.1.1.2.6 & Remplir correctement les champs, puis cliquer sur "Se connecter". & Le programme se connecte au serveur avec l'identifiant donné. & \begin{itemize}[label=$\ast$] \item \textcolor{true}{Validé.}\end{itemize}\\
 		\cline{1-2}\cline{4-5}
-		AuthC.1.4.2.1 & 3.1.1.1.2.7 & & Le message "Bonjour [pseudo]" apparait dans la barre de menu. & \\
+		AuthC.1.4.2.1 & 3.1.1.1.2.7 & & Le message "Bonjour [pseudo]" apparait dans la barre de menu. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\cline{4-5}
-		AuthC.1.4.2.2 & 3.1.1.1.2.16 & & Une case à cocher est affiché à côté du message "Bonjour [pseudo]". & \\
+		AuthC.1.4.2.2 & 3.1.1.1.2.16 & & Une case à cocher est affiché à côté du message "Bonjour [pseudo]". & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		AuthC.1.4.2.2.1 & 3.1.1.1.2.16 & Cocher la case, fermer le programme et le rouvrir.& Le programme se connecte automatiquement au serveur précédent. & \\
 		\hline
-		AuthC.1.5 & 3.1.1.1.2.2 & & Le programme ne propose aucun moyen de créer ou modifier des identifiants et mots de passe. & \\
+		AuthC.1.5 & 3.1.1.1.2.2 & & Le programme ne propose aucun moyen de créer ou modifier des identifiants et mots de passe. & \begin{itemize}[label=$\ast$] \item \textcolor{true}{Validé.}\end{itemize}\\
 		\hline
 	\end{tabular}
 	\egroup
@@ -175,7 +180,7 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		GdmpC.1 & 3.1.1.2.1 3.1.1.2.2 & Ouvrir le logiciel. & Un menu déroulant "Bookmarks" est présent dans la barre d'action. & \\
+		GdmpC.1 & 3.1.1.2.1 3.1.1.2.2 & Ouvrir le logiciel. & Un menu déroulant "Bookmarks" est présent dans la barre d'action. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		GdmpC.1.1 & 3.1.1.2.3 3.1.1.2.7& Dérouler le menu "Bookmarks". & Les boutons "Afficher les marque-pages" et "Mettre un marque-page" sont présents dans le menu. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -203,7 +208,7 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		LimiC.1 & 3.1.1.3.1 & Ouvrir le logiciel. & Le menu déroulant "Configuration est présent dans la barre d'action. & \\
+		LimiC.1 & 3.1.1.3.1 & Ouvrir le logiciel. & Le menu déroulant "Configuration est présent dans la barre d'action. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiC.1.1 & 3.1.1.3.3 3.1.1.3.7 3.1.1.3.11 3.1.1.3.14 & Cliquer sur le menu déroulant "Configuration". & Les boutons "Limiter vitesse téléchargement", "Limiter vitesse téléversement", "Plages horaires téléchargement" et "Plages horaires téléversement" sont présent dans le menu déroulant. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -384,7 +389,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		MdstC.1 & 3.1.3.3.1.1 & Ouvrir le logiciel et se connecter. & Un bouton "Statistiques" est présent dans la barre d'outil. & \\
+		MdstC.1 & 3.1.3.3.1.1 & Ouvrir le logiciel et se connecter. & Un bouton "Statistiques" est présent dans la barre d'outil. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		MdstC.1.1 & 3.1.1.7.1.2 3.1.1.7.2.1 3.1.1.7.2.2 3.1.1.7.2.3 3.1.3.3.1.2 3.1.3.3.1.3 & Cliquer sur le bouton statistique. & Une nouvelle fenêtre apparait avec une partie textuelle dans la moitié haute et une partie graphique dans la moitié basse. & \\
 		\cline{1-2}\cline{4-5}
@@ -441,7 +446,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		CrypC.1 & 3.1.3.1.2 & Faire un clic droit sur un fichier. & Le menu de gestion de fichier apparait avec le bouton "Cryptage du fichier" à l'intérieur. & \\
+		CrypC.1 & 3.1.3.1.2 & Faire un clic droit sur un fichier. & Le menu de gestion de fichier apparait avec le bouton "Cryptage du fichier" à l'intérieur. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CrypC.1.1 & 3.1.3.1.1 3.1.3.1.3 3.1.3.1.4 & Cliquer sur le bouton "Cryptage du fichier". & Le fichier est crypté et illisible pour les utilisateurs ne connaissant pas la clé de cryptage. & \\
 		\hline
@@ -601,7 +606,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BancS.1 & 3.1.2.4.1 & Cliquer sur un compte. & Un moins est présent dans la zone de droites. & \\
+		BancS.1 & 3.1.2.4.1 & Cliquer sur un compte. & Un moins est présent dans la zone de droites. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BancS.1.1 & 3.1.2.6.1.1 & Cliquer sur le moins & Un pop-up s'ouvre, celui ci contient 2 cases & \\
 		\cline{1-2}\cline{4-5}
@@ -651,7 +656,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BantS.1 & 3.1.2.5.1 & Cliquer sur un compte puis sur "-" présent sur la zone de gauche. & Un champ permet de donner une durée. & \\
+		BantS.1 & 3.1.2.5.1 & Cliquer sur un compte puis sur "-" présent sur la zone de gauche. & Un champ permet de donner une durée. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BantS.2 & 3.1.2.5.2 & Cliquer sur un compte bannis. & Le temps restant apparait à droite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -669,7 +674,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BanpS.1 & 3.1.2.6.3.1 & Ouvrir le logiciel & A droite se trouve la liste de tout les fichiers présent sur le serveur & \\
+		BanpS.1 & 3.1.2.6.3.1 & Ouvrir le logiciel & A droite se trouve la liste de tout les fichiers présent sur le serveur & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BanpS.2 & 3.1.2.6.3.2 & Cliquer sur un utilisateur & Dans la partie droite seul la liste des fichiers accessible par l'utilisateur est présente. & \\
 		\cline{1-2}\cline{4-5}
@@ -766,7 +771,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		CotS.1 & 3.1.2.6.7.1 & Ouvrir le dossier contenant les comptes temporaires. & L'extension du fichier est .acctmp & \\
+		CotS.1 & 3.1.2.6.7.1 & Ouvrir le dossier contenant les comptes temporaires. & L'extension du fichier est .acctmp & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CotS.2 & 3.1.2.6.7.2 & Ouvrir le fichier .acctmp & Le fichier contient un timestamp. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -788,7 +793,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		CobS.1 & 3.1.2.6.8.1 & Ouvrir le dossier contenant les comptes bannis & Le fichier contenant les comptes bannis doit avoir pour extension .accban & \\
+		CobS.1 & 3.1.2.6.8.1 & Ouvrir le dossier contenant les comptes bannis & Le fichier contenant les comptes bannis doit avoir pour extension .accban & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CobS.2 & 3.1.2.6.8.2 & Ouvrir le fichier .accban & Chaque ligne contient le motif de bannissement. & \\
 		\cline{1-2}\cline{4-5}
@@ -810,7 +815,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		LimiS.1 & 3.1.2.7.1 & Ouvrir le programme & Vérifier la présence du menu "Configuration" dans la barre des menus. & \\
+		LimiS.1 & 3.1.2.7.1 & Ouvrir le programme & Vérifier la présence du menu "Configuration" dans la barre des menus. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiS.2 & 3.1.2.7.2 & Cliquer sur configuration, puis sur "limiter la vitesse" et mettre en place une limite & Le programme ne télécharge pas plus vite que la vitesse définie. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -945,7 +950,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		MostS.1 & 3.1.2.11.1.1 & Ouvrir le logiciel et cliquer sur le bouton statistique. & Le programme affiche la fréquence de connexion des utilisateurs. & \\
+		MostS.1 & 3.1.2.11.1.1 & Ouvrir le logiciel et cliquer sur le bouton statistique. & Le programme affiche la fréquence de connexion des utilisateurs. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\cline{4-5}
 		MostS.2 & 3.1.2.11.1.2 & & Le programme affiche le nombre de téléchargement de chaque fichier. & \\
 		\cline{1-2}\cline{4-5}
@@ -977,7 +982,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		FhevS.1 & 3.1.2.12.1.1 & Lancer le serveur. & Un fichier d'historique d'événement est généré. & \\
+		FhevS.1 & 3.1.2.12.1.1 & Lancer le serveur. & Un fichier d'historique d'événement est généré. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\cline{4-5}
 		FhevS.2 & 3.1.2.12.1.2 & & Le fichier contient tout les événement passé entre 0h00 et 23h 59m 59s& \\
 		\cline{1-2}\cline{4-5}
@@ -998,7 +1003,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		CrypS.1 & 3.1.3.1.1 & Ouvrir le logiciel & Vérifier la présence des boutons de cryptage dans le menu configuration. & \\
+		CrypS.1 & 3.1.3.1.1 & Ouvrir le logiciel & Vérifier la présence des boutons de cryptage dans le menu configuration. & \begin{itemize}[label=$\ast$] \item \textcolor{false}{Non impémenté}\end{itemize}\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CrypS.2 & 3.1.3.1.2 & Ourir le menu de gestion des fichiers. & Un bouton "Cryptage du fichier" est présent. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
